# fastapi-es

./: .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: es_api.py
app/core/: config.py  logging.py
app/db/: elasticsearch.py
