[tool.poetry]
name = "fastapi-es"
version = "0.0.0"
description = "Getting started FastAPI with ElasticSearch"
authors = ["Biruk Abreham <birukabreham0@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.101.0"}
uvicorn = {extras = ["standard"], version = "^0.23.2"}
elasticsearch = "^8.9.0"
aiohttp = "^3.8.5"
pandas = "^2.0.3"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
skip_gitignore = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
